@@ -249,3 +249,4 @@
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-ver.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-git.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-cjdradio.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nntp.sh added.
